--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -126,7 +126,7 @@ OXOOL_CSS_LST =\
 	$(srcdir)/css/leaflet-spinner.css \
 	$(srcdir)/css/selectionMarkers.css \
 	$(srcdir)/css/color-palette.css \
-	$(srcdir)/css/color-palette-dark.css \
+	#$(srcdir)/css/color-palette-dark.css \
 	$(srcdir)/css/oxool.css \
 	$(srcdir)/css/toolbar.css \
 	$(srcdir)/css/toolbar-mobile.css \
