--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,15 @@ Source: oxool
 Section: web
 Priority: optional
 Maintainer: Firefly <firefly@ossii.com.tw>
-Build-Depends: debhelper (>= 9), dh-systemd (>= 1.3), libcap-dev, libcap2-bin, libpcre3-dev, libpng-dev, libpoco-dev (>= 1.7.5), linux-libc-dev, node-jake, npm, python-polib, python-lxml, fontconfig, libpam-dev, libcppunit-dev, pkg-config, devscripts
+Build-Depends: debhelper (>= 9.20160709) | dh-systemd (>= 1.3), libcap-dev, libcap2-bin, libpcre3-dev, libpng-dev, linux-libc-dev, nodejs, python3-polib, python3-lxml, fontconfig, libpam-dev, libcppunit-dev, pkg-config, devscripts, m4
 Standards-Version: 3.9.7
 
 Package: oxool
 Section: web
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, fontconfig, libsm6, libssl1.0.0, libodbc1, libxinerama1, libxrender1, libcairo2, libgl1-mesa-glx, libcups2, libdbus-glib-1-2, cpio, libcap2-bin, ${lo:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ adduser, expat, fontconfig, cpio, libcap2-bin, openssh-client, systemd,
+ libsm6, libodbc1, libxinerama1, libxrender1, libcairo2, libgl1-mesa-glx, libcups2, libdbus-glib-1-2, ${lo:Depends}
 Description: OxOffice Online WebSocket Daemon
  OXOOLWSD is a daemon that talks to web browser clients and provides OxOffice
  services.
