loleaflet: 新增唯讀模式專用界面
新界面會顯示工具區、檔名區及關閉按鈕。

工具區會依據 WOPI 設定，顯示如「下載、列印、投影」等按鈕。

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -326,6 +326,7 @@ OXOOL_JS_LST =\
 	src/control/Control.DownloadProgress.js \
 	src/control/Control.ContextMenu.js \
 	src/control/Control.Menubar.js \
+	src/control/Control.ReadonlyBar.js \
 	src/control/Control.Tabs.js \
 	src/control/Control.Permission.js \
 	src/control/Control.Selection.js \
@@ -687,6 +688,7 @@ pot:
 		src/control/Control.JSDialogBuilder.js \
 		src/control/Control.LanguageDialog.js \
 		src/control/Control.Menubar.js \
+		src/control/Control.ReadonlyBar.js \
 		src/control/Control.MobileBottomBar.js \
 		src/control/Control.MobileTopBar.js \
 		src/control/Control.MobileWizardBuilder.js \
