--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -1,13 +1,17 @@
 
-lib_LTLIBRARIES = liboxool.la
+lib_LTLIBRARIES = libOxOOL.la
 
-AM_CPPFLAGS = -I$(top_srcdir) \
-	-I$(top_srcdir)/src/include
+include_paths = -I$(top_srcdir) -I$(top_srcdir)/src/include
+
+AM_CPPFLAGS = -pthread ${include_paths}
+
+if !ENABLE_DEBUG
+AM_CPPFLAGS += -DNDEBUG
+endif
+
+AM_LDFLAGS = -pthread -Wl,-E
+
+libOxOOL_la_SOURCES = \
+	OxOOL/ENV.cpp
 
 
-liboxool_la_SOURCES = \
-	oxool.cpp
-
-#liboxool_la_LIBADD = \
-#		$(top_builddir)/common/liboxoolcommon.la \
-#		$(top_builddir)/net/liboxoolnet.la
