Lots of code updates.

--- a/Makefile.am
+++ b/Makefile.am
@@ -141,12 +141,14 @@ oxoolwsd_sources = common/Crypto.cpp \
                   wsd/LOOLWSD.cpp \
                   wsd/ClientSession.cpp \
                   wsd/FileServer.cpp \
+                  wsd/ProxyRequestHandler.cpp \
                   wsd/FileServerUtil.cpp \
                   wsd/RequestDetails.cpp \
                   wsd/Storage.cpp \
                   wsd/HostUtil.cpp \
                   wsd/TileCache.cpp \
-                  wsd/ProofKey.cpp
+                  wsd/ProofKey.cpp \
+                  wsd/QuarantineUtil.cpp
 
 if ENABLE_OSSII_PRODUCT
 oxoolwsd_sources += wsd/OssiiProduct.cpp
@@ -254,6 +256,7 @@ wsd_headers = wsd/Admin.hpp \
               wsd/ProxyProtocol.hpp \
               wsd/Exceptions.hpp \
               wsd/FileServer.hpp \
+              wsd/ProxyRequestHandler.hpp \
               wsd/LOOLWSD.hpp \
               wsd/ProofKey.hpp \
               wsd/RequestDetails.hpp \
@@ -264,6 +267,7 @@ wsd_headers = wsd/Admin.hpp \
               wsd/TileDesc.hpp \
               wsd/TraceFile.hpp \
               wsd/UserMessages.hpp \
+              wsd/QuarantineUtil.hpp \
               wsd/HostUtil.hpp
 
 if ENABLE_OSSII_PRODUCT
