--- a/configure.ac
+++ b/configure.ac
@@ -81,6 +81,14 @@ if test "$use_fontconfig" = "no" ; then
     AC_MSG_ERROR([Need fontconfig, but not found or version too old.])
 fi
 
+#-----------------------------------------------------------------------
+# Check for libgit2 support
+#-----------------------------------------------------------------------
+PKG_CHECK_MODULES(GIT2, libgit2, use_git2="yes", use_git2="no")
+if test "$use_git2" = "no" ; then
+    AC_MSG_ERROR([Requires the libgit2 development kit.])
+fi
+
 # Check if there are 'OssiiProduct.hpp' and OssiiProduct.cpp files in the wsd directory.
 AC_MSG_CHECKING([Does it support OSSII authorization mechanism?])
 ENABLE_OSSII_PRODUCT=false
