--- a/oxoolwsd.spec.in
+++ b/oxoolwsd.spec.in
@@ -22,6 +22,7 @@ BuildRequires:  libcap-devel libpng-devel pam-devel gcc-c++ cppunit-devel make
 BuildRequires:  poco-devel >= 1.7.5
 BuildRequires:  freetype-devel >= 2.8 fontconfig-devel >= 2.12.6
 BuildRequires:  ossiiProduct-devel >= 1.0.0
+BuildRequires:  libgit2-devel
 
 # RHEL and its derivatives
 %if 0%{?rhel} == 7
@@ -44,6 +45,7 @@ Requires:       poco-crypto >= 1.7.5 poco-data >= 1.7.5 poco-encodings >= 1.7.5 
 Summary:	Files for build OxOffice Online Editor.
 Requires:	%{name} = %{version}
 Requires:	poco-devel >= 1.7.5
+Requires:	libgit2
 %description	devel
 Files for build OxOffice Online Editor.
 
