--- a/debian/control
+++ b/debian/control
@@ -1,101 +1,27 @@
-Source: oxoolwsd
+Source: oxool
 Section: web
 Priority: optional
-Maintainer: Andras Timar <andras.timar@collabora.com>
+Maintainer: Firefly <firefly@ossii.com.tw>
 Build-Depends: debhelper (>= 9.20160709) | dh-systemd (>= 1.3), libcap-dev, libcap2-bin, nodejs, python3-polib, python3-lxml, fontconfig, libpam-dev, libcppunit-dev, pkg-config, devscripts, m4
 Standards-Version: 3.9.7
 
-Package: oxoolwsd
+Package: oxool
 Section: web
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  adduser, fontconfig, cpio, libcap2-bin, openssh-client,
- collaboraofficebasis-calc,
- collaboraofficebasis-core,
- collaboraofficebasis-graphicfilter,
- collaboraofficebasis-images,
- collaboraofficebasis-impress,
- collaboraofficebasis-ooofonts,
- collaboraofficebasis-writer,
- collaboraoffice,
- collaboraoffice-ure,
- collaboraofficebasis-en-us,
- collaboraofficebasis-draw,
- collaboraofficebasis-extension-pdf-import,
- collaboraofficebasis-ooolinguistic,
- collaboraofficebasis-math
-Conflicts: loolwsd,
- collaboraoffice-dict-br,
- collaboraoffice-dict-et,
- collaboraoffice-dict-gd,
- collaboraoffice-dict-gu,
- collaboraoffice-dict-hi,
- collaboraoffice-dict-lt,
- collaboraoffice-dict-lv,
- collaboraoffice-dict-ro,
- collaboraoffice-dict-sr,
- collaboraoffice-dict-te,
- collaboraofficebasis-as,
- collaboraofficebasis-bn-in,
- collaboraofficebasis-ast,
- collaboraofficebasis-br,
- collaboraofficebasis-ca-valencia,
- collaboraofficebasis-cy,
- collaboraofficebasis-et,
- collaboraofficebasis-ga,
- collaboraofficebasis-gd,
- collaboraofficebasis-gu,
- collaboraofficebasis-hi,
- collaboraofficebasis-km,
- collaboraofficebasis-kn,
- collaboraofficebasis-lt,
- collaboraofficebasis-lv,
- collaboraofficebasis-ml,
- collaboraofficebasis-mr,
- collaboraofficebasis-nn,
- collaboraofficebasis-or,
- collaboraofficebasis-pa-in,
- collaboraofficebasis-ro,
- collaboraofficebasis-sr,
- collaboraofficebasis-sr-latn,
- collaboraofficebasis-ta,
- collaboraofficebasis-te
-Replaces: loolwsd,
- collaboraoffice-dict-br,
- collaboraoffice-dict-et,
- collaboraoffice-dict-gd,
- collaboraoffice-dict-gu,
- collaboraoffice-dict-hi,
- collaboraoffice-dict-lt,
- collaboraoffice-dict-lv,
- collaboraoffice-dict-ro,
- collaboraoffice-dict-sr,
- collaboraoffice-dict-te,
- collaboraofficebasis-as,
- collaboraofficebasis-bn-in,
- collaboraofficebasis-ast,
- collaboraofficebasis-br,
- collaboraofficebasis-ca-valencia,
- collaboraofficebasis-cy,
- collaboraofficebasis-et,
- collaboraofficebasis-ga,
- collaboraofficebasis-gd,
- collaboraofficebasis-gu,
- collaboraofficebasis-hi,
- collaboraofficebasis-km,
- collaboraofficebasis-kn,
- collaboraofficebasis-lt,
- collaboraofficebasis-lv,
- collaboraofficebasis-ml,
- collaboraofficebasis-mr,
- collaboraofficebasis-nn,
- collaboraofficebasis-or,
- collaboraofficebasis-pa-in,
- collaboraofficebasis-ro,
- collaboraofficebasis-sr,
- collaboraofficebasis-sr-latn,
- collaboraofficebasis-ta,
- collaboraofficebasis-te
-Description: OxOffice Online WebSocket Daemon
- OXOOLWSD is a daemon that talks to web browser clients and provides LibreOffice
- services.
+ oxofficelib-calc,
+ oxofficelib-core,
+ oxofficelib-graphicfilter,
+ oxofficelib-images,
+ oxofficelib-impress,
+ oxofficelib-ooofonts,
+ oxofficelib-writer,
+ oxoffice,
+ oxoffice-ure,
+ oxofficelib-en-us,
+ oxofficelib-draw,
+ oxofficelib-extension-pdf-import,
+ oxofficelib-ooolinguistic,
+ oxofficelib-math
+Description: OxOffice Online WebSocket Daemon.
