Add files that do not need to be tracked.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Iaa7a42db9f7bb4225ee4d5c506e30ee922397d58

--- a/.gitignore
+++ b/.gitignore
@@ -168,7 +168,7 @@ dist_git_branch
 /*.pc
 /*.service
 /*.tar.gz
-debian/*.service
+debian/oxool.*
 /*-generate-proof-key
 /*-systemplate-setup
 /*.spec
