--- a/Makefile.am
+++ b/Makefile.am
@@ -110,6 +110,7 @@ shared_sources = common/FileUtil.cpp \
                  common/ConfigUtil.cpp \
                  common/Authorization.cpp \
                  common/CommandControl.cpp \
+		 common/Simd.cpp \
                  net/DelaySocket.cpp \
                  net/HttpRequest.cpp \
                  net/HttpHelper.cpp \
@@ -172,12 +173,19 @@ lokitclient_SOURCES = common/Log.cpp \
                       common/TraceEvent.cpp \
                       common/Util.cpp
 
+noinst_LIBRARIES = libsimd.a
+libsimd_a_SOURCES = kit/DeltaSimd.c
+# FIXME: x86_only etc.
+libsimd_a_CFLAGS = @SIMD_CFLAGS@
+
 oxoolforkit_sources = kit/ChildSession.cpp \
                      kit/ForKit.cpp \
                      kit/Kit.cpp
 
 oxoolforkit_SOURCES = $(oxoolforkit_sources) \
                      $(shared_sources)
+
+oxoolforkit_LDADD = libsimd.a
 
 if ENABLE_LIBFUZZER
 oxoolforkit_SOURCES += \
@@ -304,6 +312,7 @@ shared_headers = common/Common.hpp \
                  common/security.h \
                  common/SpookyV2.h \
                  common/CommandControl.hpp \
+		 common/Simd.hpp \
                  net/Buffer.hpp \
                  net/DelaySocket.hpp \
                  net/FakeSocket.hpp \
@@ -322,6 +331,7 @@ endif
 
 kit_headers = kit/ChildSession.hpp \
               kit/Delta.hpp \
+              kit/DeltaSimd.h \
               kit/DummyLibreOfficeKit.hpp \
               kit/Kit.hpp \
               kit/KitHelper.hpp \
