wasm: proxy wopi documents
Change-Id: I3104ac9a6fd180f11aef06b9d4f516a392e021a9
Signed-off-by: Ashod Nakashian <ashod.nakashian@collabora.co.uk>

--- a/Makefile.am
+++ b/Makefile.am
@@ -145,7 +145,8 @@ oxoolwsd_sources = common/Crypto.cpp \
                   wsd/HostUtil.cpp \
                   wsd/TileCache.cpp \
                   wsd/ProofKey.cpp \
-                  wsd/QuarantineUtil.cpp
+                  wsd/QuarantineUtil.cpp \
+                  wsd/WopiProxy.cpp
 
 oxoolwsd_SOURCES = wsd/MainOXOOLWSD.cpp
 
@@ -283,7 +284,8 @@ wsd_headers = wsd/Admin.hpp \
               wsd/TraceFile.hpp \
               wsd/UserMessages.hpp \
               wsd/QuarantineUtil.hpp \
-              wsd/HostUtil.hpp
+              wsd/HostUtil.hpp \
+              wsd/WopiProxy.hpp
 
 shared_headers = common/Common.hpp \
                  common/Clipboard.hpp \
