configure: WASMAPP is now defined for WASM targets
This is in line with MOBILEAPP and GTKAPP and
is independent of __EMSCRIPTEN__.

Replace all application-specific cases, leaving
only toolchain-specific ones (such as include
protection).

Change-Id: Ic44288aa5ace51e0a8b54566170c19120f7bf0dd
Signed-off-by: Ashod Nakashian <ashod.nakashian@collabora.co.uk>

--- a/config.h.in
+++ b/config.h.in
@@ -115,3 +115,5 @@
 /* Should we enable SIMD acceleration */
 #undef ENABLE_SIMD
 
+/* Define to 1 if this is the WASM app build. */
+#undef WASMAPP
