--- a/online.spec.in
+++ b/online.spec.in
@@ -8,7 +8,7 @@
 
 %define config_options --with-product-name="MODA ODF WEB" --disable-debug --enable-ssl -with-max-documents=10240 --with-max-connections=10240
 %define loroot /opt/oxoffice
-%define HAVE_DEVEL 0
+%define HAVE_DEVEL 1
 
 Name:           @PACKAGE@
 Version:        @VERSION@
@@ -92,40 +92,39 @@ echo "account    required     pam_unix.so" >>  %{buildroot}/etc/pam.d/%{name}
 %{_bindir}/@PACKAGE@stress
 %{_bindir}/@WSD_NAME@-systemplate-setup
 
-%dir /usr/share/%{name}
-/usr/share/%{name}/*
-/usr/share/doc/%{name}/*
+%dir %{_datadir}/%{name}
+%{_datadir}/%{name}/*
+%{_docdir}/%{name}/*
 %dir %attr(755, @OXOOL_USER_ID@, root) /usr/share/fonts/%{name}
-/usr/share/man/man1/*
+%{_mandir}/man1/*
 /usr/lib/systemd/system/*.service
 
-%dir /etc/%{name}
-%config(noreplace) /etc/pam.d/%{name}
-%config(noreplace) /etc/%{name}/*.pem
-%config(noreplace) %attr(640, @OXOOL_USER_ID@, root) /etc/%{name}/@WSD_NAME@.xml
-%config %attr(440, root, root) /etc/sudoers.d/@OXOOL_USER_ID@
-%config /etc/%{name}/*.xcu
+%dir %{_sysconfdir}/%{name}
+%config(noreplace) %{_sysconfdir}/pam.d/%{name}
+%config(noreplace) %{_sysconfdir}/%{name}/*.pem
+%config(noreplace) %attr(640, @OXOOL_USER_ID@, root) %{_sysconfdir}/%{name}/@WSD_NAME@.xml
+%config %attr(440, root, root) %{_sysconfdir}/sudoers.d/@OXOOL_USER_ID@
+%config %{_sysconfdir}/%{name}/*.xcu
 
 %if 0%{HAVE_DEVEL}
 %{_bindir}/@PACKAGE@-xml-config
 %dir %{_libdir}/%{name}
-%{_libdir}/%{name}/*.so
+%dir %{_sysconfdir}/%{name}/conf.d
+%{_sysconfdir}/%{name}/conf.d/Alive.xml
+%{_sysconfdir}/%{name}/conf.d/Announce.xml
+%{_libdir}/%{name}/alive.so
+%{_libdir}/%{name}/announce.so
 %{_libdir}/*.so.*
-/etc/%{name}/conf.d/*
-/usr/share/%{name}/modules
-%dir %attr(750, @OXOOL_USER_ID@, root) /usr/share/%{name}/support
-/usr/share/%{name}/support/*
-/etc/fonts/conf.d/*.conf
-%dir /etc/%{name}/conf.d
-%config(noreplace) /etc/sysconfig/@WSD_NAME@
 %endif
 
 %if 0%{HAVE_DEVEL}
 %files devel
+%{_bindir}/%{name}-module-maker
+%{_sysconfdir}/%{name}/conf.d/ModuleTesting.xml
 %{_includedir}/*
 %{_libdir}/*.so
 %{_libdir}/pkgconfig/*.pc
-%{_bindir}/%{name}-module-maker
+%{_libdir}/%{name}/ModuleTesting.so
 %{_datadir}/%{name}-devel/module-template
 %endif
 
